# silkroad

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run_scraper.py  silkroad_news.csv
.github/: copilot-instructions.md
.github/prompts/: plan-enhanceMacroDataFetching.prompt.md
src/silkroad/: __init__.py
src/silkroad/app/: __init__.py  database.py  dtypes.py  feature_extrator.py  fetchers.py  main.py  server.py  weekly_rebalancer.py
src/silkroad/app/api/v1/: api.py
src/silkroad/app/api/v1/endpoints/: database.py  estimate_cov.py
src/silkroad/app/core/: config.py  dependencies.py
src/silkroad/app/db/: market_data.py
src/silkroad/app/schemas/: database.py  db_query.py  rfolio_estimation_query.py
src/silkroad/core/: __init__.py  base_models.py  data_models.py  dtypes.py  enums.py  news_models.py  strategy_models.py  types.py
src/silkroad/data/: enums.py  models.py
src/silkroad/db/: __init__.py  articdb.py  backends.py  duckdb_store.py  manager.py  protocol.py
src/silkroad/estimators/: nlinear.py  utils.py
src/silkroad/functional/: __init__.py  backtest.py  capm.py  fetchers.py  mean_variance.py  metrics.py  paths.py  pcr.py  single_factor_model.py
src/silkroad/logger/: logger.py
src/silkroad/mean_variance/: __init__.py  mean_variance.py
src/silkroad/portfolio/: portfolio.py
src/silkroad/preprocessors/: extrator.py  macro_fetcher.py
src/silkroad/utils/: clutersing.py  cv.py  extrator.py  macro_fetcher.py  news_scraper.py  sentiment_fetcher.py
tests/: test_backtest.py  test_base_models.py  test_buffer_merge.py  test_collection_compat.py  test_database.py  test_estimation.py  test_full_dump.py  test_paths.py  test_ring_buffer.py  test_sampling.py
tests/api/: test_database_api.py  test_estimation.py
tests/app/api/v1/endpoints/: test_database.py  test_estimate_cov.py
tests/core/: test_backtest.py  test_database.py  test_exchange_hours.py  test_full_dump.py  test_metrics.py  test_paths.py  test_ring_buffer.py
tests/db/: test_articdb.py  test_articdb_sync_modular.py  test_backends.py  test_duckdb_store.py  test_manager.py  test_manager_news_global.py  test_manager_utils.py
